@@ -3,6 +3,10 @@ NEWS - OpenPrinting CUPS Filters v1.0.42 - 2013-11-29
 
 CHANGES IN V1.0.43
 
+	- pdftops: Support for PPD-less printing, page size,
+	  resolution, and fit-to-page can now be supplied by the
+	  command line (TODO: Duplex and make/model for quirk
+	  exceptions).
 	- libcupsfilters: cupsRasterParseIPPOptions() allows
 	  specifying resolutions without unit now, assuming dpi then
 	  (example: "600x600").
